Change activity size based on zoom; stop year/quarter wrapping in timeline

--- a/styles/core.css
+++ b/styles/core.css
@@ -84,6 +84,7 @@ h1, h2, h3, h4, h5, h6 {
     top: .25em;
     line-height: 1em;
     font-size: 1em;
+    white-space: nowrap;
 }
 
 #planChart {
